syntax="proto3";
package BattleCity;
 
message EnterServer
{
	int32 _id = 1;
	string _name = 2;
} 