syntax="proto3";
package WSSockServer;
 
message PlayerInformation
{
	int32 _id = 1;
	string _name = 2;
}

message ObjectInformation
{
	int32 _id = 1;
}

message ObjectPosition
{
	int32 _id = 1;
	float _vectorX = 2;
	float _vectorY = 3;
}

message ObjectTransform
{
	ObjectPosition _position = 1;
	int32 _dir = 2;
	float _scale = 3;
	float _speed = 4;
}

message CollisionNotify
{
	int32 smallplayerid = 1;
	int32 bigerplayerid = 2;
}

message IncreaseScale
{
	int32 _id = 1;
	float _increase = 2;
}